Add exception handling
